--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
         <div class="swiper-slide">
           <img src="./public/images/swiper5.jpg" alt="Work Image 5" class="w-full rounded-md" />
         </div>
+        <div class="swiper-slide">
+          <img src="./public/images/swiper9.jpg" alt="Work Image 5" class="w-full rounded-md" />
+        </div>
+        <div class="swiper-slide">
+          <img src="./public/images/swoper8.jpg" alt="Work Image 5" class="w-full rounded-md" />
+        </div>
       </div>
       <!-- Arrows -->
       <div class="swiper-button-next text-black"></div>
