--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           <ul class="space-y-4">
             <li>About Us</li>
             <li>Projects</li>
-            <li>Careers</li>
+            
             <li>News</li>
           </ul>
 
@@ -286,12 +286,12 @@
             name="contact_number"
             required
             placeholder="Enter your Number"
-            class="w-full md:w-auto placeholder:text-sm py-2 bg-black border-gray-800 px-12 md:px-16 rounded-full text-white"
+            class="w-full md:w-auto placeholder:text-sm py-2 bg-gray-800 border-gray-800 px-12 md:px-16 rounded-full text-white"
           />
           
           <button
             type="submit"
-            class="text-xs text-white font-opensans font-semibold bg-black hover:bg-gray-800 rounded-full px-20 md:px-8 py-4 z-10">
+            class="text-xs text-white font-opensans font-semibold bg-gray-800 hover:bg-gray-400 rounded-full px-20 md:px-8 py-4 z-10">
             Call Back
           </button>
         </div>
