--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
           <img src="./public/images/swiper2.jpg" alt="Work Image 2" class="w-full rounded-md" />
         </div>
         <div class="swiper-slide">
+          <img src="./public/images/swiperex2 d.jpg" alt="Work Image 2" class="w-full rounded-md" />
+        </div>
+        <div class="swiper-slide">
           <img src="./public/images/swiper3.jpg" alt="Work Image 3" class="w-full rounded-md" />
         </div>
         <div class="swiper-slide">
@@ -145,6 +148,12 @@
         </div>
         <div class="swiper-slide">
           <img src="./public/images/swiper5.jpg" alt="Work Image 5" class="w-full rounded-md" />
+        </div>
+        <div class="swiper-slide">
+          <img src="./public/images/swiper10.jpg" alt="Work Image 5" class="w-full rounded-md" />
+        </div>
+        <div class="swiper-slide">
+          <img src="./public/images/swiperex1d.jpg" alt="Work Image 5" class="w-full rounded-md" />
         </div>
         <div class="swiper-slide">
           <img src="./public/images/swiper9.jpg" alt="Work Image 5" class="w-full rounded-md" />
@@ -240,7 +249,7 @@
 
           <div class="flex gap-6 items-center">
             <img src="./public/images/icon-email.svg" alt="email" class="w-4 h-4">
-            <p>billygtradings@gmail.com</p>
+            <p>info@billygtradings.co.za</p>
           
           </div>
 
