--- a/index.html
+++ b/index.html
@@ -181,47 +181,49 @@
 
 
 
+<!-- 
+Testimonials
+<section class="bg-gray-100 pt-40 pb-60 md:pb-48 relative">
 
-    <!-- Testimonials -->
-    <section class="bg-gray-100 pt-40 pb-60 md:pb-48 relative">
+  <div class="relative grid md:grid-cols-3 gap-6 text-white max-w-7xl mx-8 md:mx-48">
+    <img src="./public/images/bg-quotes.png" alt="quotes" class="absolute -top-8 -left-2">
 
-      <div class="relative grid md:grid-cols-3 gap-6 text-white max-w-7xl mx-8 md:mx-48">
-        <img src="./public/images/bg-quotes.png" alt="quotes" class="absolute -top-8 -left-2">
-
-        <div class="bg-white text-black px-8 py-10 space-y-6 z-10 shadow-md rounded-lg">
-          <p class="font-opensans text-sm">Billy G Tradings transformed our office space with such professionalism. The finishes and quality of work were top-notch.</p>
-          <div class="flex gap-2">
-            <img src="./public/images/blank-profile.png" alt="client-1" class="w-8 rounded-full">
-            <div class="font-opensans text-xs">
-              <p>Lebogang Mokoena</p>
-              <p>Operations Manager, Fintek</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-white text-black px-8 py-10 space-y-6 z-10 shadow-md rounded-lg">
-          <p class="font-opensans text-sm">The civil works they handled on our residential estate were flawless. Great communication and professional delivery.</p>
-          <div class="flex gap-2">
-            <img src="./public/images/blank-profile.png" alt="client-2" class="w-8 rounded-full">
-            <div class="font-opensans text-xs">
-              <p>Warren kw</p>
-              <p>Consultant, Mulvara Holdings</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-white text-black px-8 py-10 space-y-6 z-10 shadow-md rounded-lg">
-          <p class="font-opensans text-sm">They handled our full renovation in record time with no shortcuts. I’ll definitely hire them again!</p>
-          <div class="flex gap-2">
-            <img src="./public/images/blank-profile.png" alt="client-3" class="w-8 rounded-full">
-            <div class="font-opensans text-xs">
-              <p>Noluthando Khumalo</p>
-              <p>Homeowner, Sandton</p>
-            </div>
-          </div>
+    <div class="bg-white text-black px-8 py-10 space-y-6 z-10 shadow-md rounded-lg">
+      <p class="font-opensans text-sm">Billy G Tradings transformed our office space with such professionalism. The finishes and quality of work were top-notch.</p>
+      <div class="flex gap-2">
+        <img src="./public/images/blank-profile.png" alt="client-1" class="w-8 rounded-full">
+        <div class="font-opensans text-xs">
+          <p>Lebogang Mokoena</p>
+          <p>Operations Manager, Fintek</p>
         </div>
       </div>
-    </section>
+    </div>
+
+    <div class="bg-white text-black px-8 py-10 space-y-6 z-10 shadow-md rounded-lg">
+      <p class="font-opensans text-sm">The civil works they handled on our residential estate were flawless. Great communication and professional delivery.</p>
+      <div class="flex gap-2">
+        <img src="./public/images/blank-profile.png" alt="client-2" class="w-8 rounded-full">
+        <div class="font-opensans text-xs">
+          <p>Warren kw</p>
+          <p>Consultant, Mulvara Holdings</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="bg-white text-black px-8 py-10 space-y-6 z-10 shadow-md rounded-lg">
+      <p class="font-opensans text-sm">They handled our full renovation in record time with no shortcuts. I’ll definitely hire them again!</p>
+      <div class="flex gap-2">
+        <img src="./public/images/blank-profile.png" alt="client-3" class="w-8 rounded-full">
+        <div class="font-opensans text-xs">
+          <p>Noluthando Khumalo</p>
+          <p>Homeowner, Sandton</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+-->
+
   </main>
 
   <footer class="bg-gray-800 relative text-white">
