--- a/index.html
+++ b/index.html
@@ -234,9 +234,26 @@ Testimonials
       <div class="flex flex-wrap pt-8 gap-8 md:justify-center">
 
         <div class="flex mx-10 md:mx-0 md:w-1/4 gap-6">
-          <img src="./public/images/icon-location.svg" alt="location" class="w-3 h-4">
-          <p>Serving Gauteng, Limpopo, and beyond — on-site and remote construction services.</p>
+          <img src="./public/images/icon-location.svg" alt="location" class="w-3 h-4 mt-1">
+          <div class="space-y-1 text-sm">
+            <p class="font-semibold">Our Locations:</p>
+            <ul class="list-disc list-inside space-y-1">
+              <li>
+                <a href="https://maps.app.goo.gl/S2zELbfddJqqC4Qt5" target="_blank" class="text-accent-cyan underline hover:text-accent-cyan/80">
+                  Gp - Boskruin View Office Park
+                </a>
+              </li>
+              
+              <li>
+                <a href="https://maps.app.goo.gl/so8A51UkvWUwmX6k6" target="_blank" class="text-accent-cyan underline hover:text-accent-cyan/80">
+                  Limpopo - Vahlavi Complex
+                </a>
+              </li>
+            </ul>
+            <p>We Serve Gauteng, Limpopo and beyond — with on-site and remote construction services.</p>
+          </div>
         </div>
+        
 
         <div class="flex flex-col gap-5 mx-10 md:mx-12">
           <div class="flex gap-6 items-center">
