--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./public/images/logonavbar.png" />
+  <link rel="icon" type="image/svg+xml" href="./public/images/favicon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Billy G Tradings</title>
   <link rel="stylesheet" href="style.css">
