[dyad] Enabled smooth scrolling for all navigation links by adding the scroll-smooth class to the body element. - wrote 1 file(s)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="mx-auto bg-white text-black">
+<body class="mx-auto bg-white text-black scroll-smooth">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
